manifests/cluster-addons/monitoring/loki/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-rustfs
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-int
      namespace: tailscale

  hostnames:
    - rustfs.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: loki-rustfs-svc
          port: 9001
